# agentic-rag-customer-service

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT_PLAN.md  Makefile  README.md  SPRINT_TODOLIST.md
apps/backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.worker  pyproject.toml
apps/backend/migrations/: add_agent_trace_outcome_indexes.sql  add_billing_and_quota_alerts.sql  add_bot_rag_modes.sql  add_built_in_tools.sql  add_cache_token_fields.sql  add_conversation_summary.sql  add_conversation_visitor_id.sql  add_default_summary_intent_models.sql  add_document_source_tracking.sql  add_error_tracking.sql  add_eval_datasets.sql  add_fab_icon_url.sql  add_intent_routes.sql  add_kb_id_to_token_usage.sql  add_kb_ocr_mode.sql  add_llm_model_to_agent_traces.sql  add_memory_system.sql  add_message_structured_content.sql  add_model_pricing.sql  add_notification_diagnostic_fields.sql  add_outbox_events.sql  add_plans_table.sql  add_prompt_opt_runs.sql  add_token_ledger.sql  add_token_ledger_topups.sql  add_wiki_navigation_strategy.sql  add_wiki_system.sql  backfill_carrefour_kb_token_usage.sql  cleanup_carrefour_orphan_chat_usage.sql  drop_token_usage_total_tokens.sql  drop_wiki.sql  gcp_full_sync_with_data.sql  gcp_sync_prompt_optimizer.sql  migrate_litellm_to_anthropic_haiku.sql  upgrade_guard_input_rules_synonyms.sql
apps/backend/prompt_optimizer/: __main__.py  api_client.py  assertions.py  config.py  dataset.py  db_client.py  evaluator.py  history.py  mutator.py  report.py  runner.py  validation_evaluator.py
apps/backend/prompt_optimizer/datasets/: _prompt_injection_advanced.yaml  _schema.json  _security_base.yaml  ecommerce_example.yaml  education_example.yaml  joyinkitchen.yaml  saas_example.yaml
apps/backend/scripts/: add_source_fields_to_milvus.py  cleanup_orphan_child_documents.py  rebuild_milvus_scalar_index.py  seed_model_pricing.py
apps/backend/seeds/: fix_pricing.py  platform_seed.sql  verify_seed.sql
apps/backend/src/: config.py  container.py  main.py  worker.py
apps/backend/src/application/agent/: intent_classifier.py  list_built_in_tools_use_case.py  order_lookup_use_case.py  product_search_use_case.py  prompt_assembler.py  send_message_use_case.py  ticket_creation_use_case.py  tool_label_resolver.py  tool_registry.py  update_built_in_tool_scope_use_case.py
apps/backend/src/application/auth/: change_password_use_case.py  delete_user_use_case.py  get_user_use_case.py  list_users_use_case.py  login_use_case.py  register_user_use_case.py  reset_password_use_case.py  update_user_use_case.py
apps/backend/src/application/billing/: _email_templates.py  get_billing_dashboard_use_case.py  list_quota_events_use_case.py  process_quota_alerts_use_case.py  quota_email_dispatch_use_case.py  topup_addon_use_case.py
apps/backend/src/application/bot/: create_bot_use_case.py  delete_bot_use_case.py  get_bot_use_case.py  list_all_bots_use_case.py  list_bots_use_case.py  update_bot_use_case.py  upload_bot_icon_use_case.py  validate_bot_enabled_tools.py  worker_use_cases.py
apps/backend/src/application/chunk_category/: __init__.py  assign_chunks_use_case.py  create_category_use_case.py  delete_category_use_case.py
apps/backend/src/application/conversation/: data_retention_use_case.py  export_feedback_use_case.py  generate_summary_use_case.py  get_conversation_messages_use_case.py  get_conversation_token_usage_use_case.py  get_conversation_use_case.py  get_feedback_stats_use_case.py  get_retrieval_quality_use_case.py  get_satisfaction_trend_use_case.py  get_token_cost_stats_use_case.py  get_top_issues_use_case.py  list_conv_summaries_use_case.py  list_conversations_use_case.py  list_feedback_use_case.py  search_conversations_use_case.py  submit_feedback_use_case.py
apps/backend/src/application/eval_dataset/: create_eval_dataset_use_case.py  delete_eval_dataset_use_case.py  eval_use_cases.py  get_eval_dataset_use_case.py  list_eval_datasets_use_case.py  manage_test_cases_use_case.py  run_use_cases.py  update_eval_dataset_use_case.py
apps/backend/src/application/health/: health_check_use_case.py
apps/backend/src/application/knowledge/: _admin_kb_check.py  _child_rename.py  _parent_aggregation.py  bulk_ingest_use_case.py  classify_kb_use_case.py  create_knowledge_base_use_case.py  delete_chunk_use_case.py  delete_document_use_case.py  delete_documents_by_source_use_case.py  delete_knowledge_base_use_case.py  get_category_chunks_use_case.py  get_document_chunks_use_case.py  get_document_quality_stats_use_case.py  get_kb_quality_summary_use_case.py  get_processing_task_use_case.py  list_all_knowledge_bases_use_case.py  list_documents_use_case.py  list_kb_chunks_use_case.py  list_knowledge_bases_use_case.py  process_document_use_case.py  reembed_chunk_use_case.py  reprocess_document_use_case.py  split_pdf_use_case.py  test_retrieval_use_case.py  update_chunk_use_case.py  update_knowledge_base_use_case.py  upload_document_use_case.py  view_document_use_case.py
apps/backend/src/application/ledger/: deduct_tokens_use_case.py  ensure_ledger_use_case.py  get_tenant_quota_use_case.py  list_all_tenants_quotas_use_case.py  process_monthly_reset_use_case.py
apps/backend/src/application/line/: handle_webhook_use_case.py
apps/backend/src/application/memory/: extract_memory_use_case.py  load_memory_use_case.py  resolve_identity_use_case.py
apps/backend/src/application/milvus/: __init__.py  get_collection_stats_use_case.py  list_collections_use_case.py  rebuild_index_use_case.py
apps/backend/src/application/observability/: agent_trace_queries.py  diagnostic_rules_use_cases.py  error_event_use_cases.py  log_retention_use_cases.py  notification_use_cases.py  rag_evaluation_use_case.py
apps/backend/src/application/outbox/: drain_outbox_use_case.py  publish_outbox_event_use_case.py
apps/backend/src/application/plan/: assign_plan_to_tenant_use_case.py  (+5 more)
apps/backend/static/: widget.js
apps/backend/tests/: conftest.py
apps/backend/tests/e2e/: conftest.py
apps/backend/tests/integration/: conftest.py
apps/backend/tests/unit/: conftest.py
(+1451 files in other folders)
